k8s/service/patient-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-record-service
  namespace: meditrack-app-v1 # Specify the namespace
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "false" # Public Load Balancer
spec:
  type: LoadBalancer
  selector:
    app: patient-record-service # Match this with the labels in your deployment
  ports:
    - protocol: TCP
      port: 80               # Exposes service on port 80
      targetPort: 5002       # Forwards traffic to container porC
