k8s/service/patientsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  namespace: meditrack-app-v1
spec:
  ports:
  - port: 5002
    protocol: TCP
  selector:
    run: patient-service
