k8s/service/patientingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patientingressnew
  namespace: meditrack-app-v1
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 5002
